--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -50,7 +50,7 @@
                 android:text="37°C"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
-                android:textSize="78sp"
+                android:textSize="68sp"
                 android:textStyle="bold"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -233,14 +233,14 @@
                 android:layout_marginTop="16dp"
                 android:clickable="true"
                 app:backgroundTint="@color/colorPrimaryDark"
+                app:ico_color="@color/white"
+                app:ico_icon="faw-map-marker-alt"
+                app:ico_size="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.134"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@color/colorPrimaryDark"
-                app:ico_color="@color/white"
-                app:ico_icon="faw-map-marker-alt"
-                app:ico_size="48dp"/>
+                app:srcCompat="@color/colorPrimaryDark" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floatingActionButton5"
@@ -251,13 +251,13 @@
                 android:layout_marginTop="16dp"
                 android:clickable="true"
                 app:backgroundTint="@color/colorPrimaryDark"
+                app:ico_color="@color/white"
+                app:ico_icon="faw-map-marker-alt"
+                app:ico_size="48dp"
                 app:layout_constraintEnd_toStartOf="@+id/floatingActionButton6"
                 app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@color/colorPrimaryDark"
-                app:ico_color="@color/white"
-                app:ico_icon="faw-map-marker-alt"
-                app:ico_size="48dp"/>
+                app:srcCompat="@color/colorPrimaryDark" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floatingActionButton6"
@@ -268,14 +268,14 @@
                 android:layout_marginTop="16dp"
                 android:clickable="true"
                 app:backgroundTint="@color/colorPrimaryDark"
+                app:ico_color="@color/white"
+                app:ico_icon="faw-map-marker-alt"
+                app:ico_size="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.875"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@color/colorPrimaryDark"
-                app:ico_color="@color/white"
-                app:ico_icon="faw-map-marker-alt"
-                app:ico_size="48dp"/>
+                app:srcCompat="@color/colorPrimaryDark" />
 
             <TextView
                 android:id="@+id/location_name"
@@ -291,10 +291,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4" />
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph"
-                android:layout_width="match_parent"
-                android:layout_height="200dip"
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart"
+                android:layout_width="0dp"
+                android:layout_height="180dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
