--- a/app/src/main/res/anim/clockwise_infinite.xml
+++ b/app/src/main/res/anim/clockwise_infinite.xml
@@ -6,7 +6,7 @@
         android:pivotY="50%"
         android:duration="678"
         android:repeatMode="restart"
-        android:repeatCount="5"
+        android:repeatCount="infinite"
         android:interpolator="@android:anim/cycle_interpolator"/>
 
 </set>
