--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:background="@color/background"
+    tools:backgroundTint="@color/background"
     tools:context="com.nocakenocode.tenkiforecast.activities.App">
 
     <android.support.v4.widget.NestedScrollView
@@ -14,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
+        android:backgroundTint="@color/background_light"
         android:fillViewport="true"
         android:visibility="visible">
 
@@ -22,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background"
+            android:backgroundTint="@color/background_light"
             android:visibility="visible"
             tools:context="com.nocakenocode.tenkiforecast.activities.App$PlaceholderFragment">
 
