Google Map, URL Helper Added and Shared Prefs
Now you can hold the location buttons to change the location using Google Map, URL helper added for easier URL serving, shared preferences have been implemented to remember user choices.

--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -53,7 +53,7 @@
                 android:fontFamily="@font/orbitron"
                 android:text="37°C"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/temperatureColor"
                 android:textSize="58sp"
                 android:textStyle="bold"
                 android:visibility="visible"
