--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00b1f2</color>
+    <color name="colorPrimary">#363636</color>
+    <color name="temperatureColor">#00b1f2</color>
     <color name="colorPrimaryDark">#0088ba</color>
     <color name="colorAccent">#ff4081</color>
     <color name="background">#252525</color>
@@ -8,4 +9,5 @@
     <color name="light_yellow">#E9E9DA</color>
     <color name="light_grey">#a1a1a1</color>
     <color name="white">#ffffff</color>
+    <color name="forest">#2a9113</color>
 </resources>
