--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -7,4 +7,8 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_edit_current"
+        android:title="@string/action_edit_current"
+        app:showAsAction="never" />
 </menu>
