--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="69dp"
                 android:layout_marginStart="63dp"
-                android:layout_marginTop="138dp"
+                android:layout_marginTop="148dp"
                 android:visibility="visible"
                 app:ico_color="@color/white"
                 app:ico_icon="wic-day-sunny"
@@ -48,13 +48,13 @@
                 android:id="@+id/temperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="6dp"
-                android:fontFamily="@font/orbitron"
+                android:fontFamily="@font/kameron"
                 android:text="37°C"
                 android:textAllCaps="false"
                 android:textColor="@color/temperatureColor"
-                android:textSize="58sp"
+                android:textSize="78sp"
                 android:textStyle="bold"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/orbitron"
+                android:fontFamily="@font/kameron"
                 android:text="26°/39° C"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -92,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/humidity"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -104,8 +103,8 @@
                 android:id="@+id/humidity2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/humidity2"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -117,8 +116,8 @@
                 android:id="@+id/wind_speed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/wind_speed"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -130,8 +129,8 @@
                 android:id="@+id/wind_speed2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/wind_speed2"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -170,7 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/wind_direction"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -182,8 +181,8 @@
                 android:id="@+id/wind_direction2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/wind_direction2"
                 android:textColor="@color/light_grey"
                 android:textSize="24sp"
@@ -288,8 +287,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="14dp"
-                android:fontFamily="@font/audiowide"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif"
                 android:text="Muscat"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -299,7 +298,7 @@
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/chart"
                 android:layout_width="0dp"
-                android:layout_height="180dp"
+                android:layout_height="190dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
