--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -230,7 +230,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/weather_visibility" />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton4"
+                android:id="@+id/fab1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -248,7 +248,7 @@
                 app:srcCompat="@color/colorPrimaryDark" />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton5"
+                android:id="@+id/fab2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -259,13 +259,13 @@
                 app:ico_color="@color/white"
                 app:ico_icon="faw-map-marker-alt"
                 app:ico_size="48dp"
-                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton6"
-                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
+                app:layout_constraintEnd_toStartOf="@+id/fab3"
+                app:layout_constraintStart_toEndOf="@+id/fab1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@color/colorPrimaryDark" />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton6"
+                android:id="@+id/fab3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -293,7 +293,7 @@
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4" />
+                app:layout_constraintTop_toBottomOf="@+id/fab1" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/chart"
