--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,9 @@
     <color name="colorPrimaryDark">#0088ba</color>
     <color name="colorAccent">#ff4081</color>
     <color name="background">#252525</color>
+    <color name="background_v2">#313131</color>
     <color name="background_light">#363636</color>
-    <color name="light_yellow">#E9E9DA</color>
+    <color name="light_yellow">#e9e9da</color>
     <color name="light_grey">#a1a1a1</color>
     <color name="white">#ffffff</color>
     <color name="forest">#2a9113</color>
