--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:background="@color/background"
     tools:backgroundTint="@color/background"
-    tools:context="com.nocakenocode.tenkiforecast.activities.App">
+    tools:context="com.nocakenocode.tenkiforecast.features.forecast.App">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -28,7 +28,7 @@
             android:focusableInTouchMode="true"
             android:focusedByDefault="true"
             android:visibility="visible"
-            tools:context="com.nocakenocode.tenkiforecast.activities.App$PlaceholderFragment">
+            tools:context="com.nocakenocode.tenkiforecast.features.forecast.App$PlaceholderFragment">
 
             <ImageView
                 android:id="@+id/weatherIcon"
